...
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/search_bar_container"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
...
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/route_picker_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/concordia_red"
        android:elevation="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
...

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/et_start"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/search_bar_hint"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
...
                        android:layout_marginEnd="12dp"
                        android:src="@android:drawable/ic_menu_mylocation"
                        android:visibility="gone" />
                </FrameLayout>

                <AutoCompleteTextView
                    android:id="@+id/et_destination"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/search_bar_hint"
                    android:inputType="textNoSuggestions"
...
                app:cornerRadius="25dp" />

        </LinearLayout>


        <FrameLayout
            android:id="@+id/close_search"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
...
                android:backgroundTint="@color/concordia_red"
                android:contentDescription="@string/maps_info"
                android:src="@drawable/vector"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/btn_campus_switch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:background="@android:drawable/presence_online"
                android:backgroundTint="@color/concordia_red"
...
                android:text="@string/campus_loy"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_location"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/maps_current_location"
...
